--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
+  "homepage": "https://Annu117.github.io/React_portfolio",
   "name": "projectportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "swiper": "^11.0.5"
+    "react-parallax-tilt": "^1.7.191",
+    "react-router-dom": "^6.21.3",
+    "react-scroll": "^1.9.0",
+    "react-typed": "^1.2.0",
+    "swiper": "^11.0.5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
